--- a/mdgBookSVG3v1.tex
+++ b/mdgBookSVG3v1.tex
@@ -173,7 +173,7 @@ The table given here (Table~\ref{fig:0tab1}) combines the two tables given on pa
 		\centering
 		\includegraphics[clip=true,trim=0.90in 7.45in 1.25in 1.00in,scale=0.90]{012TAB}
 	\end{tabular}
-	\caption{Measure number to be looked-up in the Table of Measures (see Figures~\ref{fig:meas1}, \ref{fig:meas2}, \ref{fig:meas3}, \ref{fig:meas4}, and \ref{fig:meas5} in Section~\ref{tableMeas}) corresponding to each one-die outcome per bar for the minuet and trio. Measure number in {\bf\color{blue}bold blue font} indicates identical measures under that column (see  \href{https://opus-infinity.org/Kirnberger/Menuet\%20Trio/tables/Piano/}{https://opus-infinity.org} for more info).}
+	\caption{Measure number to be looked-up in the Table of Measures (see Figures~\ref{fig:meas1}, \ref{fig:meas2}, \ref{fig:meas3}, \ref{fig:meas4}, and \ref{fig:meas5} in Section~\ref{tableMeas}) corresponding to each one-die outcome per bar for the minuet and trio. Measure number in {\bf\color{blue}bold blue font} indicates identical measures under that column (see  \href{https://opus-infinity.org/dice_games/kirnberger_menuet_trio/tables/}{https://opus-infinity.org} for more info).}
 	\label{fig:0tab1}
 \end{table}
 
