--- a/mdgBookSVG3v1.tex
+++ b/mdgBookSVG3v1.tex
@@ -272,7 +272,7 @@ My sincerest gratitude to Chris Walshaw et al. for the \href{http://www.abcnotat
 This work by I Am The Author, based on work of J.L.A. Uro at  \url{https://github.com/justineuro/mdgBookSVG3Kit}, is licensed under a Creative Commons Public Domain International License.
 
 \bibliographystyle{plainnat}
-\bibliography{mdg}
+\bibliography{mdg4}
 
  
 
