--- a/mdgBookSVG3v1.tex
+++ b/mdgBookSVG3v1.tex
@@ -260,7 +260,8 @@ My sincerest gratitude to Chris Walshaw et al. for the \href{http://www.abcnotat
 
 \newpage
 \section{Selected Waltzes}
-\vspace{0.80in}
+%\vspace{0.80in}
+\vspace{-.10in}
 {
 \small
 \topmargin -1.00in
@@ -268,6 +269,7 @@ My sincerest gratitude to Chris Walshaw et al. for the \href{http://www.abcnotat
 	\input{svgList}
 }	
 
+\newpage
 \section{License}
 This work by I Am The Author, based on work of J.L.A. Uro at  \url{https://github.com/justineuro/mdgBookSVG3Kit}, is licensed under a Creative Commons Public Domain International License.
 
